# Arch-APL-token-minter

./: Cargo.toml
src/: main.rs  test.rs
